welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:5: error: not found: value x
			x=1+x
                        ^